# ai-agent-redteam-eval-lab

./: .gitignore  README.md  course-definition.yml  pyproject.toml
.github/workflows/: ci.yml
challenge/: README.md  grader.py
challenge/solutions/python/: README.md  redteam_lab.py
challenge/starter/python/: redteam_lab.py
challenge/starter/python/tests/: test_stage_01_schema.py  test_stage_02_attacks.py  test_stage_03_runner.py  test_stage_04_deterministic_judges.py  test_stage_05_manual_eval.py  test_stage_06_llm_judge.py  test_stage_07_sdk_adapters.py  test_stage_08_reports.py
docs/: CODECRAFTERS_STYLE.md  COMPLETED_CODE_EXAMPLES.md  INTERVIEW_PREP.md  JUDGE_DESIGN.md  MANUAL_EVAL_WORKFLOW.md  SDK_ADAPTERS.md
examples/typescript/: claude-agent-sdk-judge-sketch.ts  openai-agents-judge-sketch.ts  piai-judge-adapter.ts
src/redteam_eval_lab/: __init__.py  agents.py  attacks.py  cli.py  judges.py  llm_clients.py  runner.py  schemas.py  suites.py
stage_descriptions/: 01-define-eval-schema.md  02-add-attack-transforms.md  03-build-runner.md  04-add-deterministic-judges.md  05-add-manual-eval.md  06-add-llm-judge.md  07-add-sdk-adapters.md  08-ship-reports.md
tests/: test_lab.py  test_llm_clients.py
