[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-redteam-eval-lab"
version = "0.1.0"
description = "Public, sanitized lab for AI agent red-team evals, deterministic judges, LLM judges, and manual review workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Homen Shum" }]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=2.0.0", "openai-agents>=0.17.4"]
anthropic = ["anthropic>=0.72.0", "claude-agent-sdk>=0.2.87"]
dev = ["pytest>=8.0.0"]

[project.scripts]
redteam-lab = "redteam_eval_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

